--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </Top>
     <Middle>
         <Left>
-
+            <button id="ResizeButton" onclick="CreateGrid(12)">SmallGrid</button>
+            <button id="ResizeButton" onclick="CreateGrid(24)">MediumGrid</button>
+            <button id="ResizeButton" onclick="CreateGrid(48)">LargeGrid</button>
         </Left>
 
         <Right>
